# Digital-Twin

./: .env.example  .gitignore  AGENT_MONITOR_DOCS.md  DESIGN_DOCUMENT.md  IMPLEMENTATION_SUMMARY.md  MONITOR_QUICK_REF.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  STARTUP_GUIDE.md  UI_DESIGN_COMPLETE.md  agent.md  extraction_discussion.md  pyproject.toml  setup.bat  setup.sh  start.bat  start.sh
data/: monitor_state.json
docs/: architecture.md  data_model.md
examples/: monitor_demo.py
frontend/: COMPONENT_SHOWCASE.md  UI_REFACTOR_README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: DocumentUpload.tsx  MachineSelector.tsx
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  GradientText.tsx  StatusOrb.tsx  index.ts
frontend/src/pages/: Dashboard.tsx  DocumentProcessing.tsx  Extraction.tsx  Home.tsx  Library.tsx  Settings.tsx
scripts/: analyze_pdf.py  extract_ladder.py  inspect_schematic.py  scan_documents.py
src/data/: monitor_state.json
src/data/inspection/: legend.json  reading_instructions.json  system_instructions.txt
src/digital_twin/: __init__.py  agent_monitor.py  app.py  config.py  gemini_service.py  ingestion.py  models.py  reporting.py  webapp.py
src/digital_twin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/digital_twin/templates/: index.html
