[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-twin"
version = "0.1.0"
description = "Platform for ingesting production line documents into a digital twin"
authors = [{ name = "Digital Twin Team" }]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
digital-twin-scan = "digital_twin.ingestion:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["digital_twin"]
